--- a/olsvc/pom.xml
+++ b/olsvc/pom.xml
@@ -50,10 +50,17 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
 
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
 </project>
